<resources>
    <string name="app_name">Park|Go</string>
    <string name="title_activity_maps_home">Park\'NGo</string>
    <!--Dialog box strings-->
    <string name="title_location_permission">Request Location</string>
    <string name="text_location_permission">Do you want to share your location</string>
    <string name="ok">OK</string>
    <!--end-->
    <!-- Activity-Map-Layout strings-->
    <string name="search_et">Search</string>
    <string name="go_search_btn">Go</string>
    <!-- end -->
    <!-- Activity-View-Parking-Info strings-->
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="hostType">Host Type</string>
    <string name="occupancy">Occupancy</string>
    <string name="occupied">Occupied</string>
    <string name="hold">Hold</string>
    <string name="pay_now">Pay Now</string>
    <string name="back">back</string>
    <!-- end -->
    <!-- Activity-Login strings-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password(More than 6 characters)</string>
    <string name="register">Register</string>
    <string name="role">Role</string>
    <string name="driver">Driver</string>
    <string name="host">Host</string>
    <string name="name">Name</string>
    <!-- end -->
    <!-- Activity-host-dashboard strings-->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="message">No data yet. Why don\'t you create one.</string>
    <string name="hostname">Dashboard</string>
    <!-- end -->
    <!-- Activity-add-parking strings-->
    <string name="submit">Submit</string>
    <!--end-->
    <!-- Activity-edit-parking strings-->
    <string name="delete">Delete</string>
    <!--end-->
    <!-- Activity-admin-dashboard strings-->
    <string name="manage_users">Users</string>
    <string name="manage_parkings">Parkings</string>
</resources>
