<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"

    tools:context=".HostDashboard">

    <TextView
        android:id="@+id/hostname"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="@dimen/host_header_fontsize"
        android:text="@string/hostname"/>
    <TextView
        android:id="@+id/update_messgaeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/message"
        android:visibility="invisible"
        android:layout_marginTop="40sp"/>
    <ListView
        android:id="@+id/parkings_list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/account_icon_margin"
        android:background="@drawable/rectangle_all_rounded_corners"
        />

   <!--Buttons at the bottom-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_roundedcorners_black"
            android:text="@string/add"
            android:textColor="@color/white"
            android:layout_margin="5sp"
        />

    </LinearLayout>
</LinearLayout>