<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminDashboardActivity">
    <TextView
        android:id="@+id/dashboardTV"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="@dimen/host_header_fontsize"
        android:text="@string/hostname"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/account_icon_margin"
        >
        <ImageButton
            android:id="@+id/manage_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/image_button_margin"
            android:background="@drawable/ic_managed_users"
            android:gravity="bottom"/>
        <ImageButton
            android:id="@+id/manage_parkings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/image_button_margin"
            android:background="@drawable/ic_parking"
            android:gravity="bottom"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
            android:layout_marginLeft="20sp"
        android:text="@string/manage_users"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/texview_margin"
            android:text="@string/manage_parkings"/>
    </LinearLayout>
</LinearLayout>