<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/gray"
    tools:context=".ViewAllParkings">

    <EditText
        android:id="@+id/parking_name_et"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/marginTop_parking_info"
        android:textSize="@dimen/large_textsize_parkingname"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="Parking Name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_height_parking_info"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTop_parking_info"
        android:layout_marginLeft="@dimen/marginLeft_parking_info"
        android:layout_marginRight="@dimen/marginLeft_parking_info">
        <TextView
            android:text="@string/address"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/small_width_dataText"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/address_et"
            android:layout_gravity="center"
            android:hint="@string/address"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/large_width_dataText"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_marginStart="@dimen/marginLeft_parking_info"
            android:background="@drawable/rectangle_all_rounded_corners"
            android:layout_marginLeft="@dimen/marginLeft_parking_info" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_height_parking_info"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTop_parking_info"
        android:layout_marginLeft="@dimen/marginLeft_parking_info"
        android:layout_marginRight="@dimen/marginLeft_parking_info">
        <TextView
            android:text="@string/price"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/small_width_dataText"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/price_et"
            android:hint="@string/price"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/large_width_dataText"
            android:layout_marginStart="@dimen/marginLeft_parking_info"
            android:background="@drawable/rectangle_all_rounded_corners"
            android:layout_marginLeft="@dimen/marginLeft_parking_info" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_height_parking_info"
        android:orientation="horizontal"
        android:enabled="false"
        android:layout_marginTop="@dimen/marginTop_parking_info"
        android:layout_marginLeft="@dimen/marginLeft_parking_info"
        android:layout_marginRight="@dimen/marginLeft_parking_info">
        <TextView
            android:text="@string/time"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/small_width_dataText"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/time_et"
            android:hint="@string/time"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/large_width_dataText"
            android:layout_marginStart="@dimen/marginLeft_parking_info"
            android:background="@drawable/rectangle_all_rounded_corners"
            android:layout_marginLeft="@dimen/marginLeft_parking_info" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_height_parking_info"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTop_parking_info"
        android:layout_marginLeft="@dimen/marginLeft_parking_info"
        android:layout_marginRight="@dimen/marginLeft_parking_info">
        <TextView
            android:text="@string/hostType"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/small_width_dataText"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/hostType_et"
            android:hint="@string/hostType"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/large_width_dataText"
            android:layout_marginStart="@dimen/marginLeft_parking_info"
            android:background="@drawable/rectangle_all_rounded_corners"
            android:layout_marginLeft="@dimen/marginLeft_parking_info" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_height_parking_info"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTop_parking_info"
        android:layout_marginLeft="@dimen/marginLeft_parking_info"
        android:layout_marginRight="@dimen/marginLeft_parking_info">
        <TextView
            android:text="@string/occupancy"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/small_width_dataText"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/occupancy_et"
            android:hint="@string/occupancy"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/small_width_dataText"
            android:layout_marginStart="@dimen/marginLeft_parking_info"
            android:background="@drawable/rectangle_all_rounded_corners"
            android:layout_marginLeft="@dimen/marginLeft_parking_info" />
        <TextView
            android:text="@string/occupied"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/small_width_dataText"
            android:gravity="end"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/marginEnd_parking_info"
            />
        <EditText
            android:id="@+id/occupied_et"
            android:hint="@string/occupied"
            android:gravity="center"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_height="@dimen/medium_height_parking_info"
            android:layout_width="@dimen/small_width_dataText"
            android:layout_marginStart="@dimen/marginLeft_parking_info"
            android:background="@drawable/rectangle_all_rounded_corners"
            android:layout_marginLeft="@dimen/marginLeft_parking_info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/delete_button"
            android:text="@string/delete"
            android:layout_margin="5sp"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/edit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_roundedcorners_black"
            android:text="@string/edit"
            android:layout_margin="5sp"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_roundedcorners_black"
            android:text="@string/submit"
            android:layout_margin="5sp"
            android:enabled="false"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>